# tencent_cloud_chat_sdk

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  consumer-proguard-rules.txt  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/installers/dmg_creator/: config.json
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: config.dart  main.dart
example/lib/api/: utils.dart
example/lib/commonWidget/: getFriendList.dart  getJoinedGroupList.dart
example/lib/pages/: V2TIMCommunityManager.dart  V2TIMConversationManager.dart  V2TIMFriendManager.dart  V2TIMGroupManager.dart  V2TIMManager.dart  V2TIMMessageManager.dart  callback.dart  settings.dart
example/lib/utils/: fluttertoast.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json  package-lock.json  package.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: RCa23856  Runner.rc  main.cpp
ios/: tencent_cloud_chat_sdk.podspec
ios/Classes/: TencentCloudChatSdkPlugin.swift
ios/Classes/entity/: FollowInfo.swift  FollowOperationResult.swift  FollowTypeCheckResult.swift  FriendCheckResultEntity.swift  FriendInfoResultEntity.swift  FriendOperationResultEntity.swift  GroupInfoEntity.swift  OfficialAccountInfo.swift  (+29 more)
lib/: tencent_cloud_chat_sdk_method_channel.dart  tencent_cloud_chat_sdk_platform_interface.dart  tencent_cloud_chat_sdk_web.dart  tencent_im_sdk_plugin.dart
lib/enum/: V2TimAdvancedMsgListener.dart  V2TimCommunityListener.dart  V2TimConversationListener.dart  V2TimFriendshipListener.dart  V2TimGroupListener.dart  V2TimSDKListener.dart  V2TimSimpleMsgListener.dart  V2TimUIKitListener.dart  callbacks.dart  friend_application_type_enum.dart  friend_response_type_enum.dart  friend_type_enum.dart  group_add_opt_enum.dart  group_application_type_enum.dart  group_member_filter_enum.dart  history_msg_get_type_enum.dart  image_types.dart  listener_type.dart  log_level_enum.dart  message_priority_enum.dart  offlinePushInfo.dart  receive_message_opt_enum.dart  user_info_allow_type.dart  utils.dart  v2_signaling_action_type.dart  v2_tim_conversation_marktype.dart  v2_tim_plugins.dart
lib/manager/: v2_tim_community_manager.dart  v2_tim_conversation_manager.dart  v2_tim_friendship_manager.dart  v2_tim_group_manager.dart  v2_tim_manager.dart  v2_tim_message_manager.dart  v2_tim_offline_push_manager.dart  v2_tim_signaling_manager.dart
lib/models/: v2_tim_application_processed.dart  v2_tim_callback.dart  v2_tim_conversation.dart  v2_tim_conversationList_filter.dart  v2_tim_conversation_filter.dart  v2_tim_conversation_operation_result.dart  v2_tim_conversation_result.dart  v2_tim_create_group_member_info.dart  v2_tim_custom_elem.dart  v2_tim_face_elem.dart  v2_tim_file_elem.dart  v2_tim_follow_info.dart  v2_tim_follow_operation_result.dart  v2_tim_follow_type_check_result.dart  v2_tim_friend_application.dart  v2_tim_friend_application_result.dart  v2_tim_friend_check_result.dart  v2_tim_friend_group.dart  v2_tim_friend_info.dart  v2_tim_friend_info_result.dart  v2_tim_friend_operation_result.dart  v2_tim_friend_search_param.dart  v2_tim_grant_administrator.dart  v2_tim_group_application.dart  v2_tim_group_application_result.dart  v2_tim_group_at_info.dart  v2_tim_group_attribute_changed.dart  v2_tim_group_change_info.dart  v2_tim_group_created.dart  v2_tim_group_dismissed.dart  v2_tim_group_info.dart  v2_tim_group_info_changed.dart  v2_tim_group_info_result.dart  v2_tim_group_member.dart  v2_tim_group_member_change_info.dart  v2_tim_group_member_full_info.dart  v2_tim_group_member_info.dart  v2_tim_group_member_info_result.dart  v2_tim_group_member_operation_result.dart  v2_tim_group_member_search_param.dart  (+60 more)
lib/utils/: const.dart  utils.dart
macos/: tencent_cloud_chat_sdk.podspec
macos/Classes/: TencentCloudChatSdkPlugin.swift
test/: tencent_cloud_chat_sdk_method_channel_test.dart  tencent_cloud_chat_sdk_test.dart
windows/: CMakeLists.txt  tencent_cloud_chat_sdk_plugin.cpp  tencent_cloud_chat_sdk_plugin.h  tencent_cloud_chat_sdk_plugin_c_api.cpp
windows/include/tencent_cloud_chat_sdk/: tencent_cloud_chat_sdk_plugin_c_api.h
windows/test/: tencent_cloud_chat_sdk_plugin_test.cpp
(+278 files in other folders)
